# phynetouch

./: README.md
cxx/fpm_fem/: CHANGELOG.md  CMakeLists.txt
cxx/fpm_fem/apps/: CMakeLists.txt  phynetouch_sim.cpp
cxx/fpm_fem/apps/tools/: CMakeLists.txt  config_approximation.hpp  config_approximation.tpp  config_conditions.hpp  config_conditions.tpp  config_geo.hpp  config_geo.tpp  config_material.hpp  config_material.tpp  config_output.hpp  config_output.tpp  config_physics.hpp  config_physics.tpp  config_sim.hpp  config_sim.tpp  config_units.cpp  config_units.hpp  parser.cpp  parser.hpp  parser.tpp
cxx/fpm_fem/cluster-build/: build_gcc11.sh
cxx/fpm_fem/cmake/: PHYNETOUCHConfig.cmake.in
cxx/fpm_fem/cmake/modules/: FindPETSc.cmake  FindTinyXML2.cmake
cxx/fpm_fem/docs/: CMakeLists.txt  doxyfile.in  phynetouch_refs.bib
cxx/fpm_fem/docs/source/: conf.py  conf.py.in  index.rst  index.rst.in
cxx/fpm_fem/src/: CMakeLists.txt
cxx/fpm_fem/src/PHYNETOUCH/: Conditions  Exporters  Materials  PHYNETOUCH  Physics  PostProcess  Utilities
cxx/fpm_fem/src/PHYNETOUCH/engine/conditions/: CMakeLists.txt  body_load_bc.hpp  body_load_bc.tpp  bound_conds.hpp  dirichlet_bc.hpp  dirichlet_bc.tpp  initial_bc.hpp  load_curve_basic.hpp  load_curve_factory.hpp  load_curve_smooth.cpp  load_curve_smooth.hpp  load_curve_step.cpp  load_curve_step.hpp  prescribed_bc.cpp  prescribed_bc.hpp
cxx/fpm_fem/src/PHYNETOUCH/engine/exporters/: CMakeLists.txt  binary_exporter.cpp  binary_exporter.hpp  ensight_exporter.hpp  ensight_exporter.tpp  paraview_exporter.cpp  paraview_exporter.hpp  paraview_exporter.tpp
cxx/fpm_fem/src/PHYNETOUCH/engine/materials/: CMakeLists.txt  cardiac_tissue.cpp  cardiac_tissue.hpp  catheter.hpp  catheter.tpp  constitutive.cpp  constitutive.hpp  constitutive_factory.hpp  mooney_rivlin.cpp  mooney_rivlin.hpp  neohookean.cpp  neohookean.hpp  rigid.cpp  rigid.hpp
cxx/fpm_fem/src/PHYNETOUCH/engine/physics/: CMakeLists.txt  bioheat.hpp  bioheat.tpp  contact_handle.hpp  contact_handle.tpp  deformation.hpp  deformation.tpp  electrical.hpp  electrical.tpp
cxx/fpm_fem/src/PHYNETOUCH/engine/post_process/: CMakeLists.txt  post_process.cpp  post_process.hpp
cxx/fpm_fem/src/PHYNETOUCH/engine/utilities/: CMakeLists.txt  kd_tree_impvec_vector_adaptor.hpp  logger.hpp  measure_units.cpp  measure_units.hpp  mpi_handler.hpp  petsc_idx_range.cpp  petsc_idx_range.hpp  timer.cpp  timer.hpp
